[TEST] admin-core: update tests for CompositeConditionQueryWrapperAdapter